Moved student code to separate file.
Moved the student code to a separate file so that they only change
the code that they should change.  Code that should remain
unmodified is now in the separate yourcode.c file.

--- a/floppy/Makefile
+++ b/floppy/Makefile
@@ -3,9 +3,12 @@ all: switchto openfile
 switchto: switchto.c
 	gcc -static -o $@ $<
 
-openfile: openfile.c
-	gcc -static -o $@ $<
+openfile: openfile.o yourcode.o
+	gcc -static -o $@ openfile.o yourcode.o
+
+%.o: %.c openfile.h
+	gcc -c -o $@ $<
 
 clean:
-	rm -f switchto openfile
+	rm -f *.o switchto openfile
 
